--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ local_settings.py
 db.sqlite3
 media
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
