--- a/requirements.txt
+++ b/requirements.txt
@@ -81,7 +81,7 @@ isort==4.3.4
 itsdangerous==1.1.0
 jdcal==1.4
 jedi==0.13.2
-Jinja2==2.10.1
+Jinja2==2.10
 jmespath==0.9.4
 jsonschema==2.6.0
 jupyter==1.0.0
@@ -114,7 +114,7 @@ nbformat==4.4.0
 networkx==2.2
 nltk==3.4
 nose==1.3.7
-notebook==5.7.8
+notebook==5.7.4
 numba==0.41.0
 numexpr==2.6.8
 numpy==1.15.4
@@ -165,7 +165,7 @@ pytest-remotedata==0.3.1
 python-dateutil==2.7.5
 pytz==2018.7
 PyWavelets==1.0.1
-PyYAML==4.2b1
+PyYAML==3.13
 pyzmq==17.1.2
 QtAwesome==0.5.3
 qtconsole==4.4.3
@@ -189,7 +189,7 @@ Sphinx==1.8.2
 sphinxcontrib-websupport==1.1.0
 spyder==3.3.2
 spyder-kernels==0.3.0
-SQLAlchemy==1.3.0
+SQLAlchemy==1.2.15
 statsmodels==0.9.0
 sympy==1.3
 tables==3.4.4
@@ -204,7 +204,7 @@ tornado==5.1.1
 tqdm==4.28.1
 traitlets==4.3.2
 unicodecsv==0.14.1
-urllib3==1.24.2
+urllib3==1.24.1
 wcwidth==0.1.7
 webencodings==0.5.1
 websocket-client==0.55.0
